# EmbarcaTech

./: 03-sec.c  05-if.c  06-exemple_if.c  07-if_ladder_switch_case.c  09-while.c  10-vect.c  11-for.c  12-func.c
M2/U3/U3C2O1/: hello_world.c
M3/U6/: README.md
M3/U6/C4/: user.c
M3/U6/TFLM/: README.me  creator.py  user.c
M3/U6/blink_simple/: CMakeLists.txt  blink_simple.c
M3/U6/data_collect/: CMakeLists.txt  data_collect.c
M3/U6/tinyML/: CMakeLists.txt  tinyML.c
